# chaos

./: README.md  pyproject.toml
chaos/: __init__.py  __main__.py  applycal.py  array_ops.py  calibrate.py  chain_builder.py  chunked_io.py  cli.py  config_parser.py  interpolator.py  jones_terms.py  ms_loader.py  parallactic.py  polish.py  quality.py  ratio_chain_solver.py  runner.py  single_chain_solver.py  table_io.py  utils.py  weighted_combiner.py
chaos/cli/: __init__.py  main.py
chaos/core/: __init__.py  chain_solver.py  polish.py  solver.py
chaos/io/: __init__.py  applycal.py  ms_reader.py  table_io.py
chaos/jones/: __init__.py  feed_type.py  interpolation.py  operations.py  terms.py
chaos/pipeline/: __init__.py  config_parser.py  runner.py
chaos/tests/: __init__.py  test_flagging.py  test_jones.py  test_solvers.py
chaos/utils/: __init__.py  flagging.py  parallactic.py  residuals.py
examples/: calibration.yaml
